# qtformatkit

./: .gitignore  Makefile  pyproject.toml  qtformatkit.spec
qtformatkit/: __main__.py
