[tool.poetry]
name = "qtformatkit"
version = "0.1.0"
description = ""
authors = ["AlexName1 <at146@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0"
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
